--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,1 +1,18 @@
+# Vercel
 .vercel
+
+# Environment variables
+.env
+
+# Dependencies
+node_modules/
+
+# Credentials and sensitive files
+credentials.json
+service-account*.json
+final.json
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
