--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -13,7 +13,7 @@
     }
   ],
   "env": {
-    "GOOGLE_APPLICATION_CREDENTIALS": "@google-credentials",
+    "GOOGLE_APPLICATION_CREDENTIALS_JSON": "@google-application-credentials-json",
     "GOOGLE_PROJECT_ID": "@google-project-id",
     "GOOGLE_PRIVATE_KEY_ID": "@google-private-key-id",
     "GOOGLE_PRIVATE_KEY": "@google-private-key",
@@ -24,6 +24,7 @@
     "GOOGLE_AUTH_PROVIDER_X509_CERT_URL": "@google-auth-provider-cert-url",
     "GOOGLE_CLIENT_X509_CERT_URL": "@google-client-cert-url",
     "GOOGLE_UNIVERSE_DOMAIN": "@google-universe-domain",
-    "GROQ_API_KEY": "@groq-api-key"
+    "GROQ_API_KEY": "@groq-api-key",
+    "JWT_SECRET": "@jwt-secret"
   }
 }
